cambios de lugar

--- a/novedades.html
+++ b/novedades.html
@@ -8,7 +8,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="pettit_css.css" rel="stylesheet">
+    <link href="css/pettit_css.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -39,7 +39,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
-              <img src="pelaje.png" class="img-fluid" />
+              <img src="img/pelaje.png" class="img-fluid" />
               <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
@@ -60,7 +60,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
-              <img src="barf.jpeg" class="img-fluid" />
+              <img src="img/barf.jpeg" class="img-fluid" />
               <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
@@ -81,7 +81,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
-              <img src="comportamiento-perros-sentimientos-mascotas-humanos-pruebas-cientificas-apertura.jpeg" class="img-fluid" />
+              <img src="img/comportamiento-perros-sentimientos-mascotas-humanos-pruebas-cientificas-apertura.jpeg" class="img-fluid" />
               <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
