--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pettit</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="pettit_css.css" rel="stylesheet">
+    <link href="css/pettit_css.css" rel="stylesheet">
   </head>
   <body>
 
@@ -47,7 +47,7 @@
   </div>
 </header>    
 
-          <!-- Copyright -->
+          <!-- Copyright esto lo estoy cambiando-->
 
     <div class="text-center p-3 footer-color text-light">
         © 2023 Copyright:
