--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="cuidadores.html" target="_blank">Cuidadores</a>
-                <a class="nav-link" href="perfil.html" target="_blank">Mi perfil</a>
-                <a class="nav-link" href="novedades.html" target="_blank">Novedades</a>
-                <a class="nav-link" href="sobre_nosotros.html">Sobre nosotros</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/cuidadores.html" target="_blank">Cuidadores</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/perfil.html" target="_blank">Mi perfil</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/novedades.html" target="_blank">Novedades</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/sobre_nosotros.html">Sobre nosotros</a>
             </div>
           </div>
         </div>
@@ -37,9 +37,9 @@
         <div class="text-dark">
           <h1 class="mb-3 animate__animated animate__pulse">Pettit</h1>
           <h5 class="mb-4">Encontrá tu cuidador ideal</h5>
-          <a class="btn btn-outline-dark btn-lg m-2" href="cuidadores.html" role="button"
+          <a class="btn btn-outline-dark btn-lg m-2" href="../coderdesarrollo/pages/cuidadores.html" role="button"
             rel="nofollow" target="_blank">Buscá cuidadores</a>
-          <a class="btn btn-outline-dark btn-lg m-2" href="perfil.html" target="_blank"
+          <a class="btn btn-outline-dark btn-lg m-2" href="../coderdesarrollo/pages/perfil.html" target="_blank"
             role="button">Armá tu perfil</a>
         </div>
       </div>
