--- a/pages/cuidadores.html
+++ b/pages/cuidadores.html
@@ -9,21 +9,21 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="css/pettit_css.css" rel="stylesheet">
+    <link href="../css/pettit_css.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Pettit</a>
+          <a class="navbar-brand" href="../index.html">Pettit</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="cuidadores.html" target="_blank">Cuidadores</a>
-              <a class="nav-link" href="perfil.html" target="_blank">Mi perfil</a>
-              <a class="nav-link" href="novedades.html" target="_blank">Novedades</a>
-              <a class="nav-link" href="sobre_nosotros.html">Sobre nosotros</a>
+              <a class="nav-link" href="../pages/cuidadores.html" target="_blank">Cuidadores</a>
+              <a class="nav-link" href="../pages/perfil.html" target="_blank">Mi perfil</a>
+              <a class="nav-link" href="../pages/novedades.html" target="_blank">Novedades</a>
+              <a class="nav-link" href="../pages/sobre_nosotros.html">Sobre nosotros</a>
             </div>
           </div>
         </div>
@@ -38,7 +38,7 @@
           <div class="col-lg-4 col-md-12 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="img/image (1).jpeg" class="img-fluid" />
+                <img src="../img/image (1).jpeg" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -56,7 +56,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="img/image (2).jpeg" class="img-fluid" />
+                <img src="../img/image (2).jpeg" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -74,7 +74,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="img/image (3).jpeg" class="img-fluid" />
+                <img src="../img/image (3).jpeg" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
