--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="../coderdesarrollo/pages/cuidadores.html" target="_blank">Cuidadores</a>
-                <a class="nav-link" href="../coderdesarrollo/pages/perfil.html" target="_blank">Mi perfil</a>
-                <a class="nav-link" href="../coderdesarrollo/pages/novedades.html" target="_blank">Novedades</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/cuidadores.html">Cuidadores</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/perfil.html">Mi perfil</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/novedades.html">Novedades</a>
                 <a class="nav-link" href="../coderdesarrollo/pages/sobre_nosotros.html">Sobre nosotros</a>
             </div>
           </div>
