--- a/pages/cuidadores.html
+++ b/pages/cuidadores.html
@@ -20,9 +20,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="../pages/cuidadores.html" target="_blank">Cuidadores</a>
-              <a class="nav-link" href="../pages/perfil.html" target="_blank">Mi perfil</a>
-              <a class="nav-link" href="../pages/novedades.html" target="_blank">Novedades</a>
+              <a class="nav-link" href="../pages/cuidadores.html">Cuidadores</a>
+              <a class="nav-link" href="../pages/perfil.html">Mi perfil</a>
+              <a class="nav-link" href="../pages/novedades.html">Novedades</a>
               <a class="nav-link" href="../pages/sobre_nosotros.html">Sobre nosotros</a>
             </div>
           </div>
