--- a/pages/cuidadores.html
+++ b/pages/cuidadores.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="cuidado mascotas, petsitter, catsitter, dogsitter">
+    <meta name="description" content="pagina para conocer a los cuidadores disponibles">
+
     <title>Cuidadores</title>
     <link
     rel="stylesheet"
