--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="cuidado mascotas, petsitter, catsitter, dogsitter">
+    <meta name="description" content="tu perfil dentro de la web">
+
     <title>Mi perfil</title>
     <link
     rel="stylesheet"
@@ -45,7 +48,7 @@
           </div>
 
           <div class="col-md-6 gx-5 mb-4">
-            <h4 class="texto-perfil animate__animated animate__zoomIn"><strong>Juli Romero</strong></h4>
+            <h1 class="texto-perfil animate__animated animate__zoomIn"><strong>Juli Romero</strong></h1>
             <p class="text-muted texto-perfil">
               Dueña de tres gatos y un perro. Vivo sola y viajo seguido por trabajo. Necesito alguien que pueda venir a cuidar a mis mascotas los días que yo no esté en casa.
             </p>
