--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="cuidado mascotas, petsitter, catsitter, dogsitter">
+    <meta name="description" content="pagina para conocer noticias y novedades sobre distintos aspectos de las mascotas">
     <title>Novedades</title>
     <link
     rel="stylesheet"
