--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Pettit</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="css/pettit_css.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
 
@@ -34,7 +34,7 @@
       </nav>
 
 
-<div class="bg-image shadow-2-strong">
+  <div class="bg-image shadow-2-strong">
     <div class="mask header_img">
       <div class="container d-flex align-items-center justify-content-center text-center h-100">
         <div class="text-dark">
@@ -51,12 +51,13 @@
 </header>    
 
           <!-- Copyright-->
-
+<footer class="footerIndex"> 
     <div class="text-center p-3 footer-color text-light">
         © 2023 Copyright:
         <p class="text-light">Pettit.com</p>
       </div>
-  
+</footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
