--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
-              <img src="../img/pelaje.png" class="img-fluid" />
+              <img src="../img/pelaje.png" alt="foto de perro chico sobre sillon con pelo" class="img-fluid" />
               <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
@@ -62,7 +62,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
-              <img src="../img/barf.jpeg" class="img-fluid" />
+              <img src="../img/barf.jpeg" alt="comida cruda en plato de perro" class="img-fluid" />
               <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
@@ -83,7 +83,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
-              <img src="../img/comportamiento-perros-sentimientos-mascotas-humanos-pruebas-cientificas-apertura.jpeg" class="img-fluid" />
+              <img src="../img/comportamiento-perros-sentimientos-mascotas-humanos-pruebas-cientificas-apertura.jpeg" alt="foto de niño besando un perro" class="img-fluid" />
               <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
