--- a/pages/cuidadores.html
+++ b/pages/cuidadores.html
@@ -41,7 +41,7 @@
           <div class="col-lg-4 col-md-12 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="../img/image (1).jpeg" class="img-fluid" />
+                <img src="../img/image (1).jpeg" alt="foto de ciudador hombre" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -59,7 +59,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="../img/image (2).jpeg" class="img-fluid" />
+                <img src="../img/image (2).jpeg"  alt="foto de ciudadora mujer" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -77,7 +77,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="../img/image (3).jpeg" class="img-fluid" />
+                <img src="../img/image (3).jpeg" alt="foto de ciudadora mujer" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
