--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -39,7 +39,7 @@
         <div class="row">
           <div class="col-md-6 gx-5 mb-4">
             <div class="bg-image hover-overlay ripple shadow-2-strong rounded-5" data-mdb-ripple-color="light">
-              <img src="../img/image (4).jpeg" class="img-fluid foto-perfil" />
+              <img src="../img/image (4).jpeg" alt="foto de mujer joven" class="img-fluid foto-perfil" />
               <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
