--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="col-md-6 gx-5 mb-4">
             <div class="bg-image hover-overlay ripple shadow-2-strong rounded-5" data-mdb-ripple-color="light">
-              <img src="../img/3816504.jpg" class="img-fluid" />
+              <img src="../img/3816504.jpg" alt="dibujos de dueños con sus mascotas" class="img-fluid" />
               <a href="#!">
                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
