--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -6,10 +6,7 @@
     <meta name="keywords" content="cuidado mascotas, petsitter, catsitter, dogsitter">
     <meta name="description" content="informacion sobre nosotros">
     <title>Sobre nosotros</title>
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="../css/main.css" rel="stylesheet">
   </head>
