--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <h1 class="mb-3 animate__animated animate__pulse">Pettit</h1>
           <h5 class="mb-4">Encontrá tu cuidador ideal</h5>
           <a class="btn btn-outline-dark btn-lg m-2" href="../coderdesarrollo/pages/cuidadores.html" role="button"
-            rel="nofollow" target="_blank">Buscá cuidadores</a>
-          <a class="btn btn-outline-dark btn-lg m-2" href="../coderdesarrollo/pages/perfil.html" target="_blank"
+            rel="nofollow">Buscá cuidadores</a>
+          <a class="btn btn-outline-dark btn-lg m-2" href="../coderdesarrollo/pages/perfil.html"
             role="button">Armá tu perfil</a>
         </div>
       </div>
