--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="../pages/cuidadores.html">Cuidadores</a>
-                <a class="nav-link" href="../pages/perfil.html">Mi perfil</a>
-                <a class="nav-link" href="../pages/novedades.html">Novedades</a>
-                <a class="nav-link" href="../pages/sobre_nosotros.html">Sobre nosotros</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/cuidadores.html">Cuidadores</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/perfil.html">Mi perfil</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/novedades.html">Novedades</a>
+                <a class="nav-link" href="../coderdesarrollo/pages/sobre_nosotros.html">Sobre nosotros</a>
             </div>
           </div>
         </div>
