--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="../pages/cuidadores.html">Cuidadores</a>
-                <a class="nav-link" href="../pages/perfil.html">Mi perfil</a>
-                <a class="nav-link" href="../pages/novedades.html">Novedades</a>
-                <a class="nav-link" href="../pages/sobre_nosotros.html">Sobre nosotros</a>
+                <a class="nav-link" href="./pages/cuidadores.html">Cuidadores</a>
+                <a class="nav-link" href="./pages/perfil.html">Mi perfil</a>
+                <a class="nav-link" href="./pages/novedades.html">Novedades</a>
+                <a class="nav-link" href="./pages/sobre_nosotros.html">Sobre nosotros</a>
             </div>
           </div>
         </div>
@@ -39,8 +39,8 @@
         <div class="text-dark">
           <h1 class="mb-3 animate__animated animate__pulse">Pettit</h1>
           <h5 class="mb-4">Encontrá tu cuidador ideal</h5>
-          <a class="btn btn-outline-dark btn-lg m-2" href="../pages/cuidadores.html" role="button" rel="nofollow">Buscá cuidadores</a>
-          <a class="btn btn-outline-dark btn-lg m-2" href="../pages/perfil.html" role="button">Armá tu perfil</a>
+          <a class="btn btn-outline-dark btn-lg m-2" href="./pages/cuidadores.html" role="button" rel="nofollow">Buscá cuidadores</a>
+          <a class="btn btn-outline-dark btn-lg m-2" href="./pages/perfil.html" role="button">Armá tu perfil</a>
         </div>
       </div>
     </div>
